# SCG-code-comprehension

./: .gitignore  .pre-commit-config.yaml  README.md  chroma_client.py  intent_analyzer.py  llm_client.py  main.py  main_runner.py  mcpserver.py  metrics.py  metrics_log.json  models.py  prompt.py  pyproject.toml  rag_optimization.py  requirements.txt
data/embeddings/: node_context_history.json
data/graph/: ccnTest.gdf  crucial.html  partition.js  scgTest.gdf
embeddings/: ccn_node_embedding.json  classifier_example_embeddings.json  node_context_history.json
graph/: context.py  generate_embeddings_graph.py  load_graph.py  question_embedding.py  retriver.py  similar_node_optimization.py
projects/: ccnTest.gdf  cgTest.gdf  crucial.html  summary.html  summary.js
src/app/: main.py  main_runner.py
src/clients/: AGENT.md  chroma_client.py  llm_client.py  mcpserver.py
src/context/: context_builder.py  context_extraction.py  context_fallback.py  context_filtering.py  context_priority.py  context_tokens.py
src/core/: config.py  ground_truth.json  intent_analyzer.py  judge.py  models.py  prompt.py  rag_optimization.py  token_counter.py
src/graph/: NeighborTypeEnum.py  QueryTopMode.py  RelationTypes.py  general_query.py  generate_embeddings_graph.py  load_graph.py  model_cache.py  related_entities.py  reranking.py  retrieval_utils.py  retriver.py  similar_node_optimization.py  specific_nodes.py  top_nodes.py  usage_finder.py
src/testing/: evaluator.py  ground_truth.json  ground_truth_spark.json  ground_truth_spark_ragas_ready.json  ground_truth_test_project.json  (+4 more)
