[project]
name = "inzynierka-pro1"
version = "0.1.0"
description = "System wspierający zrozumienie kodu w oparciu o modele językowe i semantyczny graf kodu"
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
    "sentence-transformers==4.1.0",
    "scikit-learn==1.6.1",
    "numpy==2.2.5",
    "httpx==0.28.1",
    "torch==2.6.0",
    "transformers==4.51.3",
    "faiss-cpu==1.11.0",
    "fastapi==0.115.9",
    "pydantic==2.11.3",
    "uvicorn==0.34.2",
    "chromadb==1.0.12",
    "loguru==0.7.3",
    "networkx==3.5",
    "mcp==1.19.0",
    "posthog==5.0.0",
    "anthropic>=0.75.0",
    "huggingface-hub>=0.36.0",
    "tiktoken>=0.3.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
